@@ -65,6 +65,26 @@ name|java
 operator|.
 name|net
 operator|.
+name|URI
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URISyntaxException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
 name|URL
 import|;
 end_import
@@ -86,16 +106,6 @@ operator|.
 name|util
 operator|.
 name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Iterator
 import|;
 end_import
 
@@ -807,7 +817,21 @@ name|plugins
 operator|.
 name|resolver
 operator|.
-name|URLResolver
+name|FileSystemResolver
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|util
+operator|.
+name|FileUtil
 import|;
 end_import
 
@@ -2739,13 +2763,33 @@ decl_stmt|;
 comment|//check on filesystem based on location attribute (for dev ONLY)
 try|try
 block|{
+name|DependencyResolver
+name|parentResolver
+init|=
 name|checkParentModuleOnFilesystem
 argument_list|(
 name|location
 argument_list|,
 name|parentMrid
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|parentResolver
+operator|!=
+literal|null
+condition|)
+block|{
+name|parent
+operator|=
+name|resolveParentFromModuleInheritanceRepository
+argument_list|(
+name|parentResolver
+argument_list|,
+name|parentMrid
+argument_list|)
 expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -2770,14 +2814,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-comment|// Resolve parent module descriptor from module inheritance repository
-name|parent
-operator|=
-name|resolveParentFromModuleInheritanceRepository
-argument_list|(
-name|parentMrid
-argument_list|)
-expr_stmt|;
 comment|// if not found, tries to resolve using repositories
 if|if
 condition|(
@@ -3620,7 +3656,7 @@ block|}
 block|}
 comment|/**          * Check if parent module is reachable using location attribute (for dev purpose).          * If parent module is reachable it will be registered in module inheritance repository           * @param location a given location           * @param parentMrid           * @throws IOException          * @throws ParseException           */
 specifier|protected
-name|void
+name|DependencyResolver
 name|checkParentModuleOnFilesystem
 parameter_list|(
 name|String
@@ -3631,131 +3667,126 @@ name|parentMrid
 parameter_list|)
 throws|throws
 name|IOException
-throws|,
-name|ParseException
 block|{
-name|IvyContext
-name|ivyContext
-init|=
-name|IvyContext
+if|if
+condition|(
+operator|!
+literal|"file"
 operator|.
-name|getContext
+name|equals
+argument_list|(
+name|descriptorURL
+operator|.
+name|getProtocol
 argument_list|()
-decl_stmt|;
+argument_list|)
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|File
 name|file
 init|=
-operator|new
-name|File
+name|FileUtil
+operator|.
+name|normalize
 argument_list|(
 name|location
 argument_list|)
 decl_stmt|;
-name|URL
-name|url
-init|=
-literal|null
-decl_stmt|;
 if|if
 condition|(
+operator|!
 name|file
 operator|.
 name|isAbsolute
 argument_list|()
 condition|)
 block|{
+name|URL
 name|url
-operator|=
-name|getSettings
-argument_list|()
-operator|.
-name|getRelativeUrlResolver
-argument_list|()
-operator|.
-name|getURL
-argument_list|(
-name|descriptorURL
-argument_list|,
-name|file
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|,
-name|location
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|url
-operator|=
-name|getSettings
-argument_list|()
-operator|.
-name|getRelativeUrlResolver
-argument_list|()
-operator|.
-name|getURL
-argument_list|(
-name|descriptorURL
-argument_list|,
-name|location
-argument_list|)
-expr_stmt|;
-block|}
-comment|// Is parent module reachable using location attribute?
-if|if
-condition|(
-name|url
-operator|.
-name|openConnection
-argument_list|()
-operator|.
-name|getContentLength
-argument_list|()
-operator|>
-literal|0
-condition|)
-block|{
-name|String
-name|urlString
 init|=
+operator|new
+name|URL
+argument_list|(
+name|descriptorURL
+argument_list|,
+name|location
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|file
+operator|=
+name|FileUtil
+operator|.
+name|normalize
+argument_list|(
+operator|new
+name|File
+argument_list|(
+operator|new
+name|URI
+argument_list|(
 name|url
 operator|.
 name|toExternalForm
 argument_list|()
-decl_stmt|;
+argument_list|)
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|URISyntaxException
+name|e
+parameter_list|)
+block|{
+name|file
+operator|=
+name|FileUtil
+operator|.
+name|normalize
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|url
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 if|if
 condition|(
 operator|!
-name|ivyContext
+name|file
 operator|.
-name|getSettings
+name|exists
 argument_list|()
-operator|.
-name|hasResolver
-argument_list|(
-name|getModuleInheritanceRepositoryParentResolverName
-argument_list|(
-name|parentMrid
-argument_list|)
-argument_list|)
 condition|)
 block|{
-name|Message
-operator|.
-name|debug
-argument_list|(
-literal|"Registering parent module into module inheritance repository map. Parent module location: "
-operator|+
-name|urlString
-argument_list|)
-expr_stmt|;
-name|URLResolver
+return|return
+literal|null
+return|;
+block|}
+name|FileSystemResolver
 name|parentModuleResolver
 init|=
 operator|new
-name|URLResolver
+name|FileSystemResolver
 argument_list|()
 decl_stmt|;
 name|parentModuleResolver
@@ -3772,25 +3803,28 @@ name|parentModuleResolver
 operator|.
 name|addIvyPattern
 argument_list|(
-name|url
+name|file
 operator|.
-name|toExternalForm
+name|getAbsolutePath
 argument_list|()
 argument_list|)
 expr_stmt|;
-comment|// Do we even need to be adding this resolver to the Ivy settings considering that it's being placed in the map and not being used elsewhere?
-name|ivyContext
+name|parentModuleResolver
+operator|.
+name|setSettings
+argument_list|(
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
 operator|.
 name|getSettings
 argument_list|()
-operator|.
-name|addResolver
-argument_list|(
-name|parentModuleResolver
 argument_list|)
 expr_stmt|;
-block|}
-block|}
+return|return
+name|parentModuleResolver
+return|;
 block|}
 comment|/**          * Describe how to parse a {@link ModuleDescriptor} by asking repositories          * @param parentMrid a given {@link ModuleRevisionId} to find          * @return a {@link ModuleDescriptor} if found. Return null if no {@link ModuleDescriptor} was found          * @throws ParseException          */
 specifier|protected
@@ -3955,6 +3989,9 @@ specifier|protected
 name|ModuleDescriptor
 name|resolveParentFromModuleInheritanceRepository
 parameter_list|(
+name|DependencyResolver
+name|resolver
+parameter_list|,
 name|ModuleRevisionId
 name|parentMrid
 parameter_list|)
@@ -4017,51 +4054,6 @@ argument_list|(
 name|engine
 argument_list|,
 name|options
-argument_list|)
-decl_stmt|;
-name|IvySettings
-name|settings
-init|=
-name|IvyContext
-operator|.
-name|getContext
-argument_list|()
-operator|.
-name|getSettings
-argument_list|()
-decl_stmt|;
-name|String
-name|resolverName
-init|=
-name|getModuleInheritanceRepositoryParentResolverName
-argument_list|(
-name|parentMrid
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-operator|!
-name|settings
-operator|.
-name|hasResolver
-argument_list|(
-name|resolverName
-argument_list|)
-condition|)
-block|{
-comment|// The parent resolver will not exist if its dev-only filesystem path hasn't been specified via the location attribute of the extends element.
-return|return
-literal|null
-return|;
-block|}
-name|DependencyResolver
-name|resolver
-init|=
-name|settings
-operator|.
-name|getResolver
-argument_list|(
-name|resolverName
 argument_list|)
 decl_stmt|;
 name|dd
