@@ -321,6 +321,24 @@ name|module
 operator|.
 name|descriptor
 operator|.
+name|ExtendsDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
 name|ModuleDescriptor
 import|;
 end_import
@@ -23922,6 +23940,135 @@ argument_list|,
 name|extra
 argument_list|)
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testIVY1347
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/IVY-1347/ivysettings.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ivy
+operator|.
+name|getSettings
+argument_list|()
+operator|.
+name|setDefaultCache
+argument_list|(
+name|cache
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|rr
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/IVY-1347/childone/childtwo/ivy.xml"
+argument_list|)
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|ModuleDescriptor
+name|md
+init|=
+name|rr
+operator|.
+name|getModuleDescriptor
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|ExtendsDescriptor
+index|[]
+name|parents
+init|=
+name|md
+operator|.
+name|getInheritedDescriptors
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|parents
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|parents
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|ModuleRevisionId
+name|parent
+init|=
+name|parents
+index|[
+literal|0
+index|]
+operator|.
+name|getParentRevisionId
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"parent"
+argument_list|,
+literal|"1.0"
+argument_list|)
+argument_list|,
+name|parent
 argument_list|)
 expr_stmt|;
 block|}
